--- a/force-app/main/default/translations/ru.translation-meta.xml
+++ b/force-app/main/default/translations/ru.translation-meta.xml
@@ -2498,10 +2498,6 @@
         <name>PG_PST_L_My_Team</name>
     </customLabels>
     <customLabels>
-        <label>Делегаты</label>
-        <name>PG_PST_L_Delegates</name>
-    </customLabels>
-    <customLabels>
         <label>Не прошел анкету</label>
         <name>PG_PS_L_Failed_Medical_Record_Review</name>
     </customLabels>
@@ -3303,6 +3299,14 @@
     <customLabels>
         <label><!-- URL Interactive Advertising Bureau --></label>
         <name>URL_Interactive_Advertising_Bureau</name>
+    </customLabels>
+    <customLabels>
+        <label>Делегаты</label>
+        <name>PG_PST_L_Delegates</name>
+    </customLabels>
+    <customLabels>
+        <label>РАЗРЕШЕННЫЕ ДЕЙСТВИЯ ДЛЯ ВАШИХ ДЕЛЕГАТОВ</label>
+        <name>PG_PST_L_Delegates_Permissions_What</name>
     </customLabels>
     <customTabs>
         <label><!-- Manual Tasks Creation --></label>
