create fields on Resource object, create Res_study__c junction object between Resource__c and Clinical_Trial_Profile__c objects

--- a/force-app/main/default/classes/ArticleService.cls
+++ b/force-app/main/default/classes/ArticleService.cls
@@ -7,14 +7,14 @@ public with sharing class ArticleService {
         for (Resource__c resource : resources) {
             if (resource.Expiration_Date__c == null) {
                 System.debug('Expiration_Date = null');
-                if (resource.Published_Date__c != null) {
-                    System.debug('Published_Date =' + resource.Published_Date__c);
-                    resource.Expiration_Date__c = resource.Published_Date__c.addMonths(12);
+                if (resource.Posting_Date__c != null) {
+                    System.debug('Posting_Date =' + resource.Posting_Date__c);
+                    resource.Expiration_Date__c = resource.Posting_Date__c.addMonths(12);
                 }
                 else {
-                    System.debug('Expiration_Date & Published_Date = null');
+                    System.debug('Expiration_Date & Posting_Date = null');
                     Date createResource = Date.today();
-                    resource.Published_Date__c = createResource;
+                    resource.Posting_Date__c = createResource;
                     resource.Expiration_Date__c = createResource.addMonths(12);
                 }
             }
@@ -23,21 +23,21 @@ public with sharing class ArticleService {
 
     public static void calculateExpirationDateBeforeUpdate (List<Resource__c> resourcesNew, Map<Id, Resource__c> oldResMap) {
         for (Resource__c resource : resourcesNew) {
-            if (resource.Published_Date__c != oldResMap.get(resource.Id).Published_Date__c
+            if (resource.Posting_Date__c != oldResMap.get(resource.Id).Posting_Date__c
                     || resource.Expiration_Date__c != oldResMap.get(resource.Id).Expiration_Date__c) {
                 System.debug('Date article change');
-                if (resource.Published_Date__c != null) {
-                    System.debug('Published_Date :' + resource.Published_Date__c);
-                    resource.Expiration_Date__c = resource.Published_Date__c.addMonths(12);
+                if (resource.Posting_Date__c != null) {
+                    System.debug('Posting_Date :' + resource.Posting_Date__c);
+                    resource.Expiration_Date__c = resource.Posting_Date__c.addMonths(12);
                 } else if (resource.Expiration_Date__c != null) {
-                    System.debug('Published_Date : null');
+                    System.debug('Posting_Date : null');
                     System.debug('Expiration_Date :' + resource.Expiration_Date__c);
-                    resource.Published_Date__c = resource.Expiration_Date__c.addMonths(-12);
+                    resource.Posting_Date__c = resource.Expiration_Date__c.addMonths(-12);
                 } else {
-                    System.debug('Published_Date : null');
+                    System.debug('Posting_Date : null');
                     System.debug('Expiration_Date = null');
                     Date createResource = Date.today();
-                    resource.Published_Date__c = createResource;
+                    resource.Posting_Date__c = createResource;
                     resource.Expiration_Date__c = createResource.addMonths(12);
                 }
             }
